# eval

./: .gitignore  pyproject.toml
src/: eval_with_deepeval.py  export_helpers.py
src/utils/: __init__.py  git_info.py
